deploy: c848d9dadef71433a0b34af033f37039957f9018

--- a/advanced/index.html
+++ b/advanced/index.html
@@ -1255,6 +1255,7 @@
 <ul>
 <li><strong>Networking</strong> - nip.io magic DNS, mDNS, mc-router configuration</li>
 <li><strong>Backup</strong> - Automatic GitHub backup for world data</li>
+<li><strong>RCON</strong> - Remote console protocol for server administration</li>
 <li><strong>World Management</strong> - Multi-server world sharing with locking</li>
 <li><strong>Auto-scaling</strong> - Automatic server start/stop based on player activity</li>
 </ul>
@@ -1272,6 +1273,12 @@
 <hr />
 <p>Set up automatic GitHub backup for world data</p>
 <p><a href="backup/">:octicons-arrow-right-24: Backup Guide</a></p>
+</li>
+<li>
+<p>:material-console:{ .lg .middle } <strong>RCON</strong></p>
+<hr />
+<p>Remote console protocol for server administration</p>
+<p><a href="rcon/">:octicons-arrow-right-24: RCON Specification</a></p>
 </li>
 </ul>
 </div>
@@ -1405,6 +1412,7 @@
 <ul>
 <li><strong><a href="networking/">Networking Guide</a></strong> - Configure hostname routing</li>
 <li><strong><a href="backup/">Backup Guide</a></strong> - Set up automatic backups</li>
+<li><strong><a href="rcon/">RCON Specification</a></strong> - Remote console protocol details</li>
 </ul>
 
 
