--- a/ko/advanced/index.html
+++ b/ko/advanced/index.html
@@ -1255,6 +1255,7 @@
 <ul>
 <li><strong>네트워킹</strong> - nip.io magic DNS, mDNS, mc-router 설정</li>
 <li><strong>백업</strong> - 월드 데이터 자동 GitHub 백업</li>
+<li><strong>RCON</strong> - 서버 관리를 위한 원격 콘솔 프로토콜</li>
 <li><strong>월드 관리</strong> - 잠금 기능이 있는 멀티 서버 월드 공유</li>
 <li><strong>자동 스케일링</strong> - 플레이어 활동에 따른 서버 자동 시작/중지</li>
 </ul>
@@ -1272,6 +1273,12 @@
 <hr />
 <p>월드 데이터 자동 GitHub 백업 설정</p>
 <p><a href="backup/">:octicons-arrow-right-24: 백업 가이드</a></p>
+</li>
+<li>
+<p>:material-console:{ .lg .middle } <strong>RCON</strong></p>
+<hr />
+<p>서버 관리를 위한 원격 콘솔 프로토콜</p>
+<p><a href="rcon/">:octicons-arrow-right-24: RCON 스펙</a></p>
 </li>
 </ul>
 </div>
@@ -1405,6 +1412,7 @@
 <ul>
 <li><strong><a href="networking/">네트워킹 가이드</a></strong> - 호스트네임 라우팅 설정</li>
 <li><strong><a href="backup/">백업 가이드</a></strong> - 자동 백업 설정</li>
+<li><strong><a href="rcon/">RCON 스펙</a></strong> - 원격 콘솔 프로토콜 상세</li>
 </ul>
 
 
